Fixes the problem of "too long" headlines

--- a/blog/client/styles/_layout.scss
+++ b/blog/client/styles/_layout.scss
@@ -43,10 +43,6 @@ body {
     font-size: 36px;
   }
 
-  h2 {
-    line-height: 20px;
-  }
-
   .lead {
     font-weight: 600;
   }
